--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "date-fns": "^3.6.0",
     "framer-motion": "^11.2.11",
     "lucide-react": "^0.399.0",
-    "next": "14.2.4",
+    "next": "^14.2.5",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-day-picker": "^8.10.1",
